// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> redirects to login for private route 1`] = `
Array [
  <Header />,
  <ToastDrawer />,
  <Login />,
  <Footer />,
]
`;

exports[`<App /> renders dashboard page 1`] = `
Array [
  <Header />,
  <ToastDrawer />,
  <Dashboard />,
  <Footer />,
]
`;

exports[`<App /> renders favorites page 1`] = `
Array [
  <Header />,
  <ToastDrawer />,
  <Favorites />,
  <Footer />,
]
`;

exports[`<App /> renders flavor stash page 1`] = `
Array [
  <Header />,
  <ToastDrawer />,
  <FlavorStash />,
  <Footer />,
]
`;

exports[`<App /> renders flavors page 1`] = `
Array [
  <Header />,
  <ToastDrawer />,
  <Flavors />,
  <Footer />,
]
`;

exports[`<App /> renders home by default 1`] = `
Array [
  <Header />,
  <ToastDrawer />,
  <Home />,
  <Footer />,
]
`;

exports[`<App /> renders login page 1`] = `
Array [
  <Header />,
  <ToastDrawer />,
  <Login />,
  <Footer />,
]
`;

exports[`<App /> renders profile page 1`] = `
Array [
  <Header />,
  <ToastDrawer />,
  <Profile />,
  <Footer />,
]
`;

exports[`<App /> renders recipe editor page 1`] = `
Array [
  <Header />,
  <ToastDrawer />,
  <RecipeEditor />,
  <Footer />,
]
`;

exports[`<App /> renders recipe page 1`] = `
Array [
  <Header />,
  <ToastDrawer />,
  <Recipe />,
  <Footer />,
]
`;

exports[`<App /> renders register page 1`] = `
Array [
  <Header />,
  <ToastDrawer />,
  <Register />,
  <Footer />,
]
`;

exports[`<App /> renders shopping list page 1`] = `
Array [
  <Header />,
  <ToastDrawer />,
  <ShoppingList />,
  <Footer />,
]
`;

exports[`<App /> renders user recipes page 1`] = `
Array [
  <Header />,
  <ToastDrawer />,
  <UserRecipes />,
  <Footer />,
]
`;

exports[`<App /> renders user settings page 1`] = `
Array [
  <Header />,
  <ToastDrawer />,
  <UserSettings />,
  <Footer />,
]
`;
